2004-11-15  Not Zed  <NotZed@Ximian.com>

	* configure.in: Added libeds to camel and mail and filter cflags.

2004-11-09  Rodney Dawes  <dobey@novell.com>

	* configure.in: Add AC_SUBST for plugins_base also

	* plugins/Makefile.am: Add plugins_base to DIST_SUBDIRS so that we
	dist the plug-ins we actually build by default

2004-11-04  Not Zed  <NotZed@Ximian.com>

	* configure.in: added mailing-list-actions plugin.

2004-11-04  Not Zed  <NotZed@Ximian.com>

	* configure.in: modified base vs optional logic slightly and added
	a warning if you build with --enable-plugins=no.

2004-11-04  David Trowbridge <David.Trowbridge@Colorado.edu>

	* configure.in: Added calendar-http module, and setup a mechanism
	for base vs optional plugins.

2004-11-03  JP Rosevear  <jpr@novell.com>

	* configure.in: fix the logic
	
2004-11-03  JP Rosevear  <jpr@novell.com>

	* configure.in: handle plain --enable-plugins and
	--enable-plugins=yes by making it the equivalent of "all"		

2004-11-03  Not Zed  <NotZed@Ximian.com>

	* configure.in: added plugin-manager plugin.

2004-11-01  JP Rosevear  <jpr@novell.com>

	* Makefile.am: dist plugin.mk

2004-10-29  Rodrigo Moya <rodrigo@novell.com>

	* configure.in: added mail-to-meeting plugin.

2004-10-28 Nat Friedman <nat@novell.com>

	* configure.in: Re-enable bbwhatever becuase I think it works now.

2004-10-27  JP Rosevear  <jpr@novell.com>

	* configure.in: revive E_WIDGETS_CFLAGS/LIBS because of needing to
	add libedataserverui

2004-10-27  Not Zed  <NotZed@Ximian.com>

	* configure.in: removed bbwhatever it is until the makefiles are
	fixed.

2004-10-25  Radek Doulik  <rodo@ximian.com>

	* configure.in: added audio-inline plugin, added gstreamer check
	for it

	if gstreamer is not available, remove audio-inline plugin from the
	plugins list

2004-10-22  Harish K  <kharish@novell.com>

	* configure.in: Added mark-calendar-offline plugin

2004-10-22  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Added folder-unsubscribe plugin
