@@ -1,15 +1,0 @@
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@includedir@
-
-camel_providerdir=@camel_providerdir@
-privlibdir=@privlibdir@
-privincludedir=@privincludedir@
-
-Name: camel
-Description: the Evolution mail library
-Version: @VERSION@
-Requires: gal-2.4 >= @GAL_REQUIRED@
-Libs: -L${privlibdir} -lcamel
-Cflags: -I${privincludedir}
