@@ -1,3 +1,10 @@
+2004-11-16  Not Zed  <NotZed@Ximian.com>
+
+	* Makefile.am (SUBDIRS): removed camel.
+
+	* configure.in: Removed camel building, fixed module includes to
+	use camel via packageconfig.
+
 2004-11-15  Not Zed  <NotZed@Ximian.com>
 
 	* configure.in: Added libeds to camel and mail and filter cflags.
